--- a/index.html
+++ b/index.html
@@ -8,21 +8,16 @@
 </head>
 
 <body>
-	<h1 id="title">Matt Lynner | Web Developer</h1>
+	<div class="title">
+		<h1 id="title">Matt Lynner | Web Developer</h1>
+	</div>
 		
 <!--Navigation Section-->		
 		
 <div class="navbar">
   <a href="#">Home</a>
+  <a href="#">Projects</a>
   <a href="#">Contact</a>
-  <div class="dropdown">
-    <button class="dropbtn">Projects</button>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
-  </div> 
 </div>
 			
 <div class="image-container">
