--- a/index.html
+++ b/index.html
@@ -91,6 +91,36 @@
 
 <!--END GALLERY-->
 
+
+<!--CONTACT FORM-->
+
+<h2 class="contact-heading">Contact Me</h2>
+
+<div class="form-container">
+	<form action="action_page.php">
+		
+		<label for= "fname">First Name</label>
+		<input type="text" id="fname" name="firstname"
+		placeholder="Your name..">
+		
+		<label for="lname">Last Name</label>
+		<input type="text" id="lname" name="lastname"
+		placeholder="Your last name..">
+		
+		<label for="email">Email</label>
+		<input type="text" id="email" name="email"
+		placeholder="Email..">
+		
+		<label for="subject">Subject</label>
+		<textarea id="subject" name="subject"
+		placeholder="Send me a message.." style="height: 200px">
+		</textarea>
+		
+		<input type="submit" value="Submit">
+		
+	</form>
+</div>
+
 <script>
 
 
