--- a/index.html
+++ b/index.html
@@ -33,58 +33,38 @@
 <div class="row">
 	<div class="column">
 		<div class="content">
-			<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
-			alt="Strength" style="width: 100%">
-			<h3>My Work</h3>
+			<figure class="caption">
+				<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
+				alt="other" style="width: 100%">
+				<figcaption class="caption-text">Project Caption Testing</figcaption>
+			</figure>
 		</div>
 	</div>
-	<div class="column">
+		<div class="column">
 		<div class="content">
-			<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
-			alt="other" style="width: 100%">
-			<h3>My Work</h3>
+			<figure class="caption">
+				<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
+				alt="other" style="width: 100%">
+				<figcaption class="caption-text">Project Caption Testing</figcaption>
+			</figure>
 		</div>
 	</div>
-	<div class="column">
+		<div class="column">
 		<div class="content">
-			<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
-			alt="other" style="width: 100%">
-			<h3>My Work</h3>
+			<figure class="caption">
+				<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
+				alt="other" style="width: 100%">
+				<figcaption class="caption-text">Project Caption Testing</figcaption>
+			</figure>
 		</div>
 	</div>
-	<div class="column">
+		<div class="column">
 		<div class="content">
-			<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
-			alt="other" style="width: 100%">
-			<h3>My Work</h3>
-		</div>
-	</div>
-	<div class="column">
-		<div class="content">
-			<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
-			alt="other" style="width: 100%">
-			<h3>My Work</h3>
-		</div>
-	</div>
-	<div class="column">
-		<div class="content">
-			<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
-			alt="other" style="width: 100%">
-			<h3>My Work</h3>
-		</div>
-	</div>
-	<div class="column">
-		<div class="content">
-			<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
-			alt="other" style="width: 100%">
-			<h3>My Work</h3>
-		</div>
-	</div>
-	<div class="column">
-		<div class="content">
-			<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
-			alt="other" style="width: 100%">
-			<h3>My Work</h3>
+			<figure class="caption">
+				<img src="https://images.unsplash.com/photo-1465711403138-162e171bb7e4?dpr=1&auto=format&fit=crop&w=376&h=251&q=60&cs=tinysrgb"
+				alt="other" style="width: 100%">
+				<figcaption class="caption-text">Project Caption Testing</figcaption>
+			</figure>
 		</div>
 	</div>
 </div>
