--- a/index.html
+++ b/index.html
@@ -78,26 +78,29 @@
 <h2 class="contact-heading">Contact Me</h2>
 
 <div class="form-container">
-	<form action="action_page.php">
+	<form method="post" action="contact.php">
 
-		<label for= "fname">First Name</label>
-		<input type="text" id="fname" name="firstname"
+		<label>First Name</label>
+		<input type="text" name="firstname"
 		placeholder="Your name..">
 
-		<label for="lname">Last Name</label>
-		<input type="text" id="lname" name="lastname"
+		<label>Last Name</label>
+		<input type="text" name="lastname"
 		placeholder="Your last name..">
 
-		<label for="email">Email</label>
-		<input type="text" id="email" name="email"
+		<label>Email</label>
+		<input type="text" name="email"
 		placeholder="Email..">
 
-		<label for="subject">Subject</label>
-		<textarea id="subject" name="subject"
+		<label>Subject</label>
+		<textarea name="message"
 		placeholder="Send me a message.." style="height: 200px">
 		</textarea>
 
-		<input type="submit" value="Submit">
+		<label>*What is 2+2? (Anti-spam)</label>
+		<input name="human" placeholder="Type Here">
+
+		<input type="submit" value="submit">
 
 	</form>
 </div>
