--- a/index.html
+++ b/index.html
@@ -77,35 +77,32 @@
 
 <h2 class="contact-heading">Contact Me</h2>
 
-<div class="form-container">
-	<form action="action_page.php">
+<form id="contact" action="">
 
-		<label for= "fname">First Name</label>
-		<input type="text" id="fname" name="firstname"
-		placeholder="Your name..">
-
-		<label for="lname">Last Name</label>
-		<input type="text" id="lname" name="lastname"
-		placeholder="Your last name..">
-
-		<label for="email">Email</label>
-		<input type="text" id="email" name="email"
-		placeholder="Email..">
-
-		<label for="subject">Subject</label>
-		<textarea id="subject" name="subject"
-		placeholder="Send me a message.." style="height: 200px">
-		</textarea>
-
-		<input type="submit" value="Submit">
-
-	</form>
-</div>
-
-<script>
+<label for="name" id="name_label">Name *</label>
+<label class="error" for="name" id="name_error">this field is required</label>
+<br /> <input type="text" name="name" id="name" value="" class="text-input" placeholder="How should I call you?" />
 
 
-</script>
+<br />
+<label for="email" id="email_label">E-Mail *</label>
+<label class="error" for="email" id="email_error">this field is required</label>
+<label class="error" for="email" id="email_invalid_error">please insert a valid email</label>
+<br /> <input type="email" name="email" id="email" value="" class="text-input" placeholder="How can I reach you?" />
+
+
+<br />
+<label for="message">Message *</label>
+<label class="error" for="message" id="message_error">this field is required</label>
+<br /> <textarea name="message" id="message" rows="8" class="text-input" placeholder="What would you like to tell me?"></textarea>
+
+
+<br />
+<input name="submit" id="submit" value="Send me Mail!" type="submit" class="subbutton">
+
+</form>
+
+<script src="script/validate-form.js"></script>
 
 </body>
 </html>
