--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	</div>
 
 <!--Navigation Section-->
-
 <div class="navbar">
   <a href="#">Home</a>
   <a href="#">Projects</a>
@@ -42,7 +41,6 @@
     }
   })
 </script>
-
 
 
 <!--Portfolio Gallery Grid-->
@@ -93,15 +91,33 @@
 
 
 <!--CONTACT FORM-->
-<header class="contact-heading">Contact Me</header>
+<h2 class="projects">Contact Me</h2>
+
 <div class="form-container">
-<form method="POST" action="https://formspree.io/matthewlynner@gmail.com">
-	<input type="text" name="name">
-  <input type="email" name="email" placeholder="Your email">
-  <textarea name="message" placeholder="Your message"></textarea>
-  <button type="submit">Send</button>
-</form>
+  <form method="POST" action="https://formspree.io/matthewlynner@gmail.com">
+
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" placeholder="Name..">
+
+    <label for="email">Email</label>
+    <input type="text" id="email" name="email" placeholder="Email..">
+
+    <label for="subject">Message</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
 </div>
+
+
+
+
+
+
+
+
+
 
 <!--END CONTACT FORM-->
 
