Added and linked about, contact pages. Added image folder

--- a/about.html
+++ b/about.html
@@ -51,75 +51,10 @@
 
     <!--Welcome Section-->
     <div class="container welcome-header">
-      <h1>Welcome</h1>
-      <p>Take a look around at what I've built, feel free to reach out with any questions</p>
+      <h1>About</h1>
+      <p>Thank you for taking a look at my portfolio website!
+      This site is hosted on GitHub Pages and custom built with Bootstrap 4.0. All of my projects live here along with some other personal applications I have completed. I update this site periodically as I continue to learn more about web development and the wide world of programming. Feel free to <a href="contact.html">Contact Me</a> with any questions or suggestions.</p>
     </div>
-
-    <!-- Image Gallery-->
-<div class="container">
-  <div class="row">
-   <div class="col-md-4">
-      <div class="hovereffect">
-          <img class="img-responsive" src="images/TCstrength.png" alt="TCstrength" height="100%">
-              <div class="overlay">
-                  <h2>Twin Cities Strength</h2>
-  				<p>
-  					<a href="http://www.twincitiesstrength.com" target="_blank">View Site</a>
-  				</p>
-              </div>
-      </div>
-  </div>
-  <div class="col-md-4">
-      <div class="hovereffect">
-          <img class="img-responsive" src="https://i.pinimg.com/736x/f7/9f/4f/f79f4f860cfc6e80ad861599c782d5c4--beautiful-waterfalls-karnataka.jpg" alt="">
-              <div class="overlay">
-                  <h2>The Hair Chateau</h2>
-            				<p>
-            					<a href="http://localhost:8888/hairchateau/hairchateau/" target="_blank">View Site</a>
-            				</p>
-              </div>
-      </div>
-  </div>
-
-  <div class="col-md-4">
-      <div class="hovereffect">
-          <img class="img-responsive" src="https://i.pinimg.com/736x/f7/9f/4f/f79f4f860cfc6e80ad861599c782d5c4--beautiful-waterfalls-karnataka.jpg" alt="">
-              <div class="overlay">
-                  <h2>Flexible Benefits Consulting</h2>
-  				<p>
-  					<a href="#">View Site</a>
-  				</p>
-              </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!--CONTACT FORM-->
-<div class="container welcome-header">
-  <h1>Contact Me</h1>
-  <p>Questions?</p>
-</div>
-<div class="container">
-<form action="https://formspree.io/matthewlynner@gmail.com" method="POST">
-  <div class="form-group">
-    <label for="Name">Name</label>
-    <input type="text" class="form-control" id="FirstName" placeholder="First Name" name="name">
-  </div>
-  <div class="form-group">
-    <label for="Email">Email address</label>
-    <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Enter email" name="_replyto">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="Message">Message</label>
-    <textarea class="form-control" id="Message" rows="3" name="Message"></textarea>
-  </div>
-  <button type="submit" class="btn btn-primary" value="Send">Submit</button>
-</form>
-</div>
-
-<!--END CONTACT FORM-->
 
 <footer>
   <div class="footer-icons">
