--- a/contact.html
+++ b/contact.html
@@ -51,49 +51,9 @@
 
     <!--Welcome Section-->
     <div class="container welcome-header">
-      <h1>Welcome</h1>
-      <p>Take a look around at what I've built, feel free to reach out with any questions</p>
+      <h1>Contact Me</h1>
+      <p>Fill out the form below and I'll be in touch!</p>
     </div>
-
-    <!-- Image Gallery-->
-<div class="container">
-  <div class="row">
-   <div class="col-md-4">
-      <div class="hovereffect">
-          <img class="img-responsive" src="images/TCstrength.png" alt="TCstrength" height="100%">
-              <div class="overlay">
-                  <h2>Twin Cities Strength</h2>
-  				<p>
-  					<a href="http://www.twincitiesstrength.com" target="_blank">View Site</a>
-  				</p>
-              </div>
-      </div>
-  </div>
-  <div class="col-md-4">
-      <div class="hovereffect">
-          <img class="img-responsive" src="https://i.pinimg.com/736x/f7/9f/4f/f79f4f860cfc6e80ad861599c782d5c4--beautiful-waterfalls-karnataka.jpg" alt="">
-              <div class="overlay">
-                  <h2>The Hair Chateau</h2>
-            				<p>
-            					<a href="http://localhost:8888/hairchateau/hairchateau/" target="_blank">View Site</a>
-            				</p>
-              </div>
-      </div>
-  </div>
-
-  <div class="col-md-4">
-      <div class="hovereffect">
-          <img class="img-responsive" src="https://i.pinimg.com/736x/f7/9f/4f/f79f4f860cfc6e80ad861599c782d5c4--beautiful-waterfalls-karnataka.jpg" alt="">
-              <div class="overlay">
-                  <h2>Flexible Benefits Consulting</h2>
-  				<p>
-  					<a href="#">View Site</a>
-  				</p>
-              </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!--CONTACT FORM-->
 <div class="container welcome-header">
