added project pages and other edits

--- a/about.html
+++ b/about.html
@@ -14,31 +14,21 @@
   <body>
     <!-- Navigation Section -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Projects</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="http://www.twincitiesstrength.com">Twin Cities Strength</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">The Hair Chateau</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Flexible Benefits Consulting</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Portfolio</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="projects.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+  </nav>
 
     <!--header image-->
 
