--- a/projects.html
+++ b/projects.html
@@ -39,32 +39,33 @@
       </div>
     </div>
 
-<!--CONTACT FORM-->
-<div class="container welcome-header">
-  <h1>Contact Me</h1>
-  <p>Questions?</p>
-</div>
+    <!--Welcome Section-->
+    <div class="container welcome-header">
+      <h1>Projects</h1>
+      <p>Stuff I built....</p>
+    </div>
 
-<div class="container form-container">
-<form action="https://formspree.io/matthewlynner@gmail.com" method="POST">
-  <div class="form-group">
-    <label for="Name">Name</label>
-    <input type="text" class="form-control" id="FirstName" placeholder="First Name" name="name">
-  </div>
-  <div class="form-group">
-    <label for="Email">Email address</label>
-    <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Enter email" name="_replyto">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="Message">Message</label>
-    <textarea class="form-control" id="Message" rows="3" name="Message"></textarea>
-  </div>
-  <button type="submit" class="btn btn-primary" value="Send">Submit</button>
-</form>
-</div>
+<!--Projects live here..-->
+    <div class="container">
+      <div class="row">
+       <div class="col-md-8">
+              <img class="img-responsive" src="images/TCstrength_macbook.png" alt="TCstrength" width="100%" height="100%">
+      				<p>
+      					<a href="http://www.twincitiesstrength.com" target="_blank">View Site</a>
+      				</p>
+      </div>
+      <div class="col-md-4 project-container">
+        <h2>Twin Cities Strength & Fitness</h2>
+        <p>Some information about the website</p>
+      </div>
+      </div>
+    </div>
 
-<!--END CONTACT FORM-->
+
+
+
+
+
 
 <footer>
   <div class="footer-icons">
@@ -80,15 +81,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-  <script>
-  $('navbar').find('a').click(function(){
-      var $href = $(this).attr('href');
-      var $anchor = $('#'+$href).offset();
-  		$('body').animate({ scrollTop: $anchor.top });
-      return false;
-  });
-  </script>
 
   </body>
 </html>
