edited about page and added images

--- a/about.html
+++ b/about.html
@@ -41,34 +41,19 @@
 
     <!--Welcome Section-->
     <div class="container welcome-header">
-      <h1>About</h1>
-      <p>Thank you for taking a look at my portfolio website!
+      <h1>About Matt</h1>
+    </div>
+    <div class="text-center">
+      <img src="images/Matt.jpeg" alt="Matt" class="img-thumbnail matt-photo">
+      <p class="about-matt">Thank you for taking a look at my portfolio website!
       This site is hosted on GitHub Pages and custom built with Bootstrap 4.0. All of my projects live here along with some other personal applications I have completed. I update this site periodically as I continue to learn more about web development and the wide world of programming. Feel free to <a href="contact.html">Contact Me</a> with any questions or suggestions.</p>
     </div>
 
 <footer>
-  <div class="footer-icons">
-
-  </div>
   <div class="container text-center">
     <p>Matthew Lynner Copyright 2018</p>
   </div>
 </footer>
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-  <script>
-  $('navbar').find('a').click(function(){
-      var $href = $(this).attr('href');
-      var $anchor = $('#'+$href).offset();
-  		$('body').animate({ scrollTop: $anchor.top });
-      return false;
-  });
-  </script>
 
   </body>
 </html>
