--- a/projects.html
+++ b/projects.html
@@ -49,10 +49,7 @@
     <div class="container">
       <div class="row">
        <div class="col-md-8">
-              <img class="img-responsive" src="images/TCstrength_macbook.png" alt="TCstrength" width="100%" height="100%">
-      				<p>
-      					<a href="http://www.twincitiesstrength.com" target="_blank">View Site</a>
-      				</p>
+              <img class="float-left" src="images/TCstrength_macbook.png" alt="TCstrength" width="100%" height="100%">
       </div>
       <div class="col-md-4 project-container">
         <h2>Twin Cities Strength & Fitness</h2>
@@ -61,8 +58,48 @@
       </div>
     </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 project-container">
+          <h2>The Hair Chateau</h2>
+          <p>Some information about the website</p>
+        </div>
+       <div class="col-md-8">
+              <img class="float-right" src="images/hairchateau_macbook.png" alt="hairchateau" width="100%" height="100%">
+      </div>
+      </div>
+    </div>
 
+<div class="container welcome-header">
+  <h1>Applications</h1>
+</div>
 
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="images/pexels-photo.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/pexels-photo.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/pexels-photo.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
 
 
