--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
     </div>
 
     <!--Welcome Section-->
-    <div class="container welcome-header">
+    <div class="container application-header">
       <h1>Welcome</h1>
-      <p>Take a look around at what I've built, feel free to reach out with any questions</p>
+      <p>Thank you for taking a look at my page! Feel free to click through some of the websites I've built below or visit my <a href="projects.html">projects page</a> for more information.
     </div>
+
+<hr class="hrstyle">
 
     <!-- Image Gallery-->
 <div class="container">
@@ -62,11 +64,12 @@
   </div>
   <div class="col-md-4">
       <div class="hovereffect">
-          <img class="img-responsive" src="https://i.pinimg.com/736x/f7/9f/4f/f79f4f860cfc6e80ad861599c782d5c4--beautiful-waterfalls-karnataka.jpg" alt="">
+          <img class="img-responsive" src="images/hairchateau.png" alt="Hair"
+          height="100%">
               <div class="overlay">
                   <h2>The Hair Chateau</h2>
             				<p>
-            					<a href="http://localhost:8888/hairchateau/hairchateau/" target="_blank">View Site</a>
+            					Coming Soon!
             				</p>
               </div>
       </div>
@@ -74,11 +77,12 @@
 
   <div class="col-md-4">
       <div class="hovereffect">
-          <img class="img-responsive" src="https://i.pinimg.com/736x/f7/9f/4f/f79f4f860cfc6e80ad861599c782d5c4--beautiful-waterfalls-karnataka.jpg" alt="">
+          <img class="img-responsive" src="images/Flexben.png" alt="Flexben"
+          height="100%">
               <div class="overlay">
                   <h2>Flexible Benefits Consulting</h2>
   				<p>
-  					<a href="#">View Site</a>
+  					Coming Soon!
   				</p>
               </div>
       </div>
@@ -86,10 +90,12 @@
   </div>
 </div>
 
+<hr class="hrstyle">
+
 <!--CONTACT FORM-->
-<div class="container welcome-header">
+<div class="container application-header">
   <h1>Contact Me</h1>
-  <p>Questions?</p>
+    <p>Questions?</p>
 </div>
 
 <div class="container form-container">
@@ -107,7 +113,7 @@
     <label for="Message">Message</label>
     <textarea class="form-control" id="Message" rows="3" name="Message"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary" value="Send">Submit</button>
+  <button type="submit" class="btn btn-secondary" value="Send">Submit</button>
 </form>
 </div>
 
@@ -118,7 +124,7 @@
 
   </div>
   <div class="container text-center">
-    <p>Matthew Lynner Copyright 2018</p>
+    <p>Matthew Lynner 2018</p>
   </div>
 </footer>
 
