--- a/about.html
+++ b/about.html
@@ -32,13 +32,6 @@
 
     <!--header image-->
 
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">Matt Lynner | Web Developer</h1>
-         <p class="lead">Minneapolis, MN</p>
-      </div>
-    </div>
-
     <!--Welcome Section-->
     <div class="container welcome-header">
       <h1>About Matt</h1>
@@ -46,12 +39,13 @@
     <div class="text-center">
       <img src="images/Matt.jpeg" alt="Matt" class="img-thumbnail matt-photo">
       <p class="about-matt">Thank you for taking a look at my portfolio website!
-      This site is hosted on GitHub Pages and custom built with Bootstrap 4.0. All of my projects live here along with some other personal applications I have completed. I update this site periodically as I continue to learn more about web development and the wide world of programming. Feel free to <a href="contact.html">Contact Me</a> with any questions or suggestions.</p>
+      This site is hosted on GitHub Pages and custom built with Bootstrap 4.0. All of my projects live here along with some other personal applications I have completed. I update this site periodically as I continue to learn more about web development and the wide world of programming. Please take a look at some of my <a href="projects.html">Projects</a> or feel free to <a href="contact.html">Contact Me</a> with any questions or suggestions.</p>
+      <p>Thank you!</p>
     </div>
 
 <footer>
   <div class="container text-center">
-    <p>Matthew Lynner Copyright 2018</p>
+    <p>Matthew Lynner 2018</p>
   </div>
 </footer>
 
