--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <script src="javascript.js"></script>
+
   </head>
 
   <body>
@@ -32,28 +34,22 @@
 
     <!--header image-->
 
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">Matt Lynner | Web Developer</h1>
-         <p class="lead">Minneapolis, MN</p>
-      </div>
-    </div>
-
     <!--Welcome Section-->
     <div class="container welcome-header">
       <h1>Projects</h1>
-      <p>Stuff I built....</p>
+      <p>Check out what I've been working on!</p>
     </div>
 
 <!--Projects live here..-->
     <div class="container">
       <div class="row">
+        <div class="col-md-4 project-container">
+          <h2>Twin Cities Strength & Fitness</h2>
+          <p>Wordpress website built to be fully responsive accross all browser sizes.</p>
+          <a href="http://www.twincitiesstrength.com" class="btn btn-outline-secondary">Visit Site</a>
+        </div>
        <div class="col-md-8">
-              <img class="float-left" src="images/TCstrength_macbook.png" alt="TCstrength" width="100%" height="100%">
-      </div>
-      <div class="col-md-4 project-container">
-        <h2>Twin Cities Strength & Fitness</h2>
-        <p>Some information about the website</p>
+              <img class="float-right" src="images/TCstrength_macbook.png" alt="hairchateau" width="100%" height="100%">
       </div>
       </div>
     </div>
@@ -62,7 +58,7 @@
       <div class="row">
         <div class="col-md-4 project-container">
           <h2>The Hair Chateau</h2>
-          <p>Some information about the website</p>
+          <p>Mobile first Wordpress website customized on a child theme template.</p>
         </div>
        <div class="col-md-8">
               <img class="float-right" src="images/hairchateau_macbook.png" alt="hairchateau" width="100%" height="100%">
@@ -70,38 +66,47 @@
       </div>
     </div>
 
-<div class="container welcome-header">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 project-container">
+          <h2>Flexible Benefit Consulting</h2>
+          <p>Wordpress website built for an insurance company that was updating their branding and wanted to include a newer modern website.</p>
+        </div>
+       <div class="col-md-8">
+              <img class="float-right" src="images/Flexben_macbook.png" alt="hairchateau" width="100%" height="100%">
+      </div>
+      </div>
+    </div>
+
+<hr class="hrstyle">
+
+
+<div class="container application-header">
   <h1>Applications</h1>
 </div>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="images/pexels-photo.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="images/pexels-photo.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="images/pexels-photo.jpg" alt="Third slide">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Quote Machine</h5>
+          <p class="card-text">Random quote machine built in Javascript. </p>
+          <a href="quotes/index.html" class="btn btn-secondary">View</a>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
-
-
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Calculator</h5>
+          <p class="card-text">A simple calculator created with vanilla Javascript.</p>
+          <a href="calculator/index.html" class="btn btn-secondary">View</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 <footer>
@@ -109,7 +114,7 @@
 
   </div>
   <div class="container text-center">
-    <p>Matthew Lynner Copyright 2018</p>
+    <p>Matthew Lynner 2018</p>
   </div>
 </footer>
 
