--- a/quotes/index.html
+++ b/quotes/index.html
@@ -6,11 +6,13 @@
     <title>Arnold Quote Machine</title>
   </head>
   <body>
-    <h1>Arnold Schwartzenegger Quotes</h1>
+    <h1>Arnold Schwarzenegger Quotes</h1>
+
     <div id="quoteDisplay">
           <!-- Quotes display here -->
     </div>
-      <button onclick="newQuote()">New Quote</button>
+
+      <button class="myButton" onclick="newQuote()">New Quote</button>
     <script src="script.js"></script>
   </body>
 </html>
