--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
@@ -33,7 +33,7 @@
     <!--header image-->
 
     <!--Welcome Section-->
-    <div class="container welcome-header">
+    <div class="container-fluid about-header">
       <h1>About Matt</h1>
     </div>
     <div class="text-center">
