--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,12 @@
   <body>
     <!-- Navigation Section -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <ul class="navbar-nav mr-auto">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -28,6 +32,8 @@
           <li class="nav-item active">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+        </ul>
+      </div>
     </nav>
 
     <!--header image-->
@@ -47,7 +53,7 @@
   <div class="form-group">
     <label for="Email">Email address</label>
     <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Enter email" name="_replyto">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else :)</small>
   </div>
   <div class="form-group">
     <label for="Message">Message</label>
