styled quotes project

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -12,7 +12,13 @@
           <!-- Quotes display here -->
     </div>
 
-      <button class="myButton" onclick="newQuote()">New Quote</button>
+    <div class="mybutton">
+      <button onclick="newQuote()">New Quote</button>
+    </div>
+    <footer>
+      <p>Matt Lynner 2018</p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
