--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-<hr class="hrstyle">
+<hr class="hrstyleprojects">
 
 
 <div class="container application-header">
@@ -119,7 +119,7 @@
 
   </div>
   <div class="container text-center">
-    <p>Matthew Lynner 2018</p>
+    Matthew Lynner 2018
   </div>
 </footer>
 
