--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
   </div>
   <div class="container text-center">
-    <p>Matthew Lynner 2018</p>
+    Matthew Lynner 2018
   </div>
 </footer>
 
