--- a/projects.html
+++ b/projects.html
@@ -92,16 +92,25 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-4">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Quote Machine</h5>
-          <p class="card-text">Random quote machine built in Javascript. </p>
-          <a href="quotes/index.html" class="btn btn-secondary">View</a>
+          <h5 class="card-title">RGB Color Game</h5>
+          <p class="card-text">Test your RGB color skills with The Great Color Game!</p>
+          <a href="ColorGuessingGame/color.html" class="btn btn-secondary">View</a>
         </div>
       </div>
     </div>
-    <div class="col-sm-6">
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Quote Machine</h5>
+            <p class="card-text">Random quote machine built in Javascript. </p>
+            <a href="quotes/index.html" class="btn btn-secondary">View</a>
+          </div>
+        </div>
+      </div>
+    <div class="col-sm-4">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Calculator</h5>
