added images and updated calculator style

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -30,7 +30,7 @@
         <div class="calcRow">
           <input type="button" class="calcButton" value="0" onclick="numInput('0')" />
           <input type="button" class="calcButton" value="." onclick="insertDecimal('.')" />
-          <input type="button" class="calcButton" value="C" onclick="clearDisplay()" />
+          <input type="button" id="clearButton" class="calcButton" value="C" onclick="clearDisplay()" />
           <input type="button" class="calcButton" value="=" onclick="calculate()" />
         </div>
       </form>
