--- a/projects.html
+++ b/projects.html
@@ -94,6 +94,7 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
+        <img class="card-img-top" src="images/colorgame.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">RGB Color Game</h5>
           <p class="card-text">Test your RGB color skills with The Great Color Game!</p>
@@ -103,6 +104,7 @@
     </div>
       <div class="col-sm-4">
         <div class="card">
+          <img class="card-img-top" src="images/quotemachine.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Quote Machine</h5>
             <p class="card-text">Random quote machine built in Javascript. </p>
@@ -112,6 +114,7 @@
       </div>
     <div class="col-sm-4">
       <div class="card">
+        <img class="card-img-top" src="images/calculator.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Calculator</h5>
           <p class="card-text">A simple calculator created with vanilla Javascript.</p>
