--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <script src="typed.js"></script>
     <script src="javascript.js"></script>
   </head>
 
@@ -40,7 +41,7 @@
     <!--header image-->
 
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
+      <div class="container, introText">
         <h1 class="display-4">Matt Lynner | Web Developer</h1>
          <p class="lead">Minneapolis, MN</p>
       </div>
