--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
   <body>
     <!-- Navigation Section -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container introText">
+          <h1 class="display-4">Matt Lynner | Web Developer</h1>
+           <p class="lead">Minneapolis, MN</p>
+        </div>
+      </div>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,17 +48,10 @@
 
     <!--header image-->
 
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container, introText">
-        <h1 class="display-4">Matt Lynner | Web Developer</h1>
-         <p class="lead">Minneapolis, MN</p>
-      </div>
-    </div>
-
     <!--Welcome Section-->
     <div class="container application-header">
       <h1>Welcome</h1>
-      <p>Thank you for taking a look at my page! Feel free to click through some of the websites I've built below or visit my <a href="projects.html">projects page</a> for more information.
+      <p>Thank you for taking a look at my page! Feel free to click through some of the websites and applications I've built below or visit my <a href="projects.html">projects page</a> for more information.
     </div>
 
 <hr class="hrstyle">
@@ -94,6 +95,39 @@
               </div>
       </div>
     </div>
+    <div class="col-md-4">
+       <div class="hovereffect">
+           <img class="img-responsive" src="images/colorgame.png" alt="ColorGame">
+               <div class="overlay">
+                   <h2>The Great Color Guessing Game</h2>
+   				<p>
+   					<a href="ColorGuessingGame/color.html" target="_blank">View Project</a>
+   				</p>
+               </div>
+       </div>
+   </div>
+       <div class="col-md-4">
+          <div class="hovereffect">
+              <img class="img-responsive" src="images/quotemachine.png" alt="Quotes" height="100%">
+                  <div class="overlay">
+                      <h2>Random Quote Machine</h2>
+      				<p>
+      					<a href="quotes/index.html">View Project</a>
+      				</p>
+                  </div>
+          </div>
+      </div>
+      <div class="col-md-4">
+         <div class="hovereffect">
+             <img class="img-responsive" src="images/calculator.png" alt="Calc" height="100%">
+                 <div class="overlay">
+                     <h2>Calculator</h2>
+             <p>
+               <a href="calculator/index.html" target="_blank">View Project</a>
+             </p>
+                 </div>
+         </div>
+     </div>
   </div>
 </div>
 
