--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
       <div class="row">
         <div class="col-md-4 project-container">
           <h2>Twin Cities Strength & Fitness</h2>
-          <p>Wordpress website built to be fully responsive accross all browser sizes.</p>
+          <p>This simple WordPress website was built to be fully responsive accross all browser sizes to provide a landing page for my personal training business.</p>
           <a href="http://www.twincitiesstrength.com" class="btn btn-outline-secondary">Visit Site</a>
         </div>
        <div class="col-md-8">
@@ -63,7 +63,10 @@
       <div class="row">
         <div class="col-md-4 project-container">
           <h2>The Hair Chateau</h2>
-          <p>Mobile first Wordpress website customized on a child theme template.</p>
+          <p>The Hair Chateau was looking to replace their static Google Pages website with an updated mobile-first site. This design was created with WordPress on a child theme template.</p>
+          <!--
+          <a href="hairchateau.html" class="btn btn-outline-secondary">View Project</a>
+        -->
         </div>
        <div class="col-md-8">
               <img class="float-right" src="images/hairchateau_macbook.png" alt="hairchateau" width="100%" height="100%">
@@ -75,7 +78,7 @@
       <div class="row">
         <div class="col-md-4 project-container">
           <h2>Flexible Benefit Consulting</h2>
-          <p>Wordpress website built for an insurance company that was updating their branding and wanted to include a newer modern website.</p>
+          <p>WordPress website built for an insurance company that was updating their branding and wanted to include a newer modern website. This site includes an RSS feed, Paubox form integration, and a customer portal.</p>
         </div>
        <div class="col-md-8">
               <img class="float-right" src="images/Flexben_macbook.png" alt="hairchateau" width="100%" height="100%">
