image container fluid

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <hr class="hrstyle">
 
     <!-- Image Gallery-->
-<div class="container">
+<div class="container-fluid">
   <div class="row">
    <div class="col-md-4">
       <div class="hovereffect">
@@ -95,6 +95,8 @@
               </div>
       </div>
     </div>
+  </div>
+  <div class="row">
     <div class="col-md-4">
        <div class="hovereffect">
            <img class="img-responsive" src="images/colorgame.png" alt="ColorGame">
