fixed height on color game image

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="row">
     <div class="col-md-4">
        <div class="hovereffect">
-           <img class="img-responsive" src="images/colorgame.png" alt="ColorGame">
+           <img class="img-responsive" src="images/colorgame.png" alt="ColorGame" height="100%">
                <div class="overlay">
                    <h2>The Great Color Guessing Game</h2>
    				<p>
