Update welcome text spacing

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<div class="container">
 
 		<!--Welcome Section-->
-		<h1 class="mt-4">Welcome</h1>
+		<h1 class="my-4">Welcome</h1>
 		<p>Thank you for taking a look at my page! Feel free to click through some of the websites and applications I've built below or visit my <a href="projects.html">projects page</a> for more information.
 
 		<hr class="hrstyle">
