--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="typed.js"></script>
 	<script src="index.js"></script>
 </head>
@@ -18,7 +19,8 @@
 	<div class="jumbotron jumbotron-fluid">
 		<div class="container row justify-content-end align-items-center">
 			<div id="typed-strings">
-				<h1 class="text-light">Matt Lynner | <span id="typed"></span></h1>
+				<h1 class="text-light">Matt Lynner</h1>
+				<h3 id="typed"></h3>
 			</div>
 		</div>
 	</div>
@@ -57,61 +59,73 @@
 		<!-- Image Gallery-->
 		<div class="row">
 			<div class="col-md-4">
-				<div class="hovereffect">
-					<img class="img-responsive" src="images/TCstrength.png" alt="TCstrength" height="100%">
-						<div class="overlay">
-							<h2>Twin Cities Strength</h2>
-							<a href="#" target="_blank">View Site</a>
-						</div>
-				</div>
+				<a href="projects.html#tc-strength">
+					<div class="hovereffect">
+						<img class="img-responsive" src="images/TCstrength.png" alt="TCstrength" height="100%">
+							<div class="overlay">
+								<h2>Twin Cities Strength</h2>
+								<p>View Details</p>
+							</div>
+					</div>
+				</a>
 			</div>
 			<div class="col-md-4">
-				<div class="hovereffect">
-					<img class="img-responsive" src="images/hairchateau.png" alt="Hair" height="100%">
-						<div class="overlay">
-							<h2>The Hair Chateau</h2>
-							<a href="http://www.thehairchateau.org" target="_blank">View Site</a>
-						</div>
-				</div>
+				<a href="projects.html#hair-chateau">
+					<div class="hovereffect">
+						<img class="img-responsive" src="images/hairchateau.png" alt="Hair" height="100%">
+							<div class="overlay">
+								<h2>The Hair Chateau</h2>
+								<p>View Details</p>
+							</div>
+					</div>
+				</a>
 			</div>
 			<div class="col-md-4">
-				<div class="hovereffect">
-					<img class="img-responsive" src="images/Flexben.png" alt="Flexben"
-					height="100%">
-						<div class="overlay">
-							<h2>Flexible Benefits Consulting</h2>
-							<a href="#" target="_blank">View Site</a>
-						</div>
-				</div>
+				<a href="projects.html#fbc">
+					<div class="hovereffect">
+						<img class="img-responsive" src="images/Flexben.png" alt="Flexben"
+						height="100%">
+							<div class="overlay">
+								<h2>Flexible Benefits Consulting</h2>
+								<p>View Details</p>
+							</div>
+					</div>
+				</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-4">
-				<div class="hovereffect">
-					<img class="img-responsive" src="images/colorgame.png" alt="ColorGame" height="100%">
-						<div class="overlay">
-							<h2>The Great Color Guessing Game</h2>
-							<a href="ColorGuessingGame/color.html" target="_blank">View Project</a>
-						</div>
-				</div>
+				<a href="ColorGuessingGame/color.html">
+					<div class="hovereffect">
+						<img class="img-responsive" src="images/colorgame.png" alt="ColorGame" height="100%">
+							<div class="overlay">
+								<h2>RGB Color Game</h2>
+								<p>View Project</p>
+							</div>
+					</div>
+				</a>
 			</div>
 			<div class="col-md-4">
-				<div class="hovereffect">
-					<img class="img-responsive" src="images/quotemachine.png" alt="Quotes" height="100%">
-						<div class="overlay">
-							<h2>Random Quote Machine</h2>
-							<a href="quotes/index.html">View Project</a>
-						</div>
-				</div>
+				<a href="quotes/index.html">
+					<div class="hovereffect">
+						<img class="img-responsive" src="images/quotemachine.png" alt="Quotes" height="100%">
+							<div class="overlay">
+								<h2>Random Quote Machine</h2>
+								<p>View Project</p>
+							</div>
+					</div>
+				</a>
 			</div>
 			<div class="col-md-4">
-				<div class="hovereffect">
-					<img class="img-responsive" src="images/calculator.png" alt="Calc" height="100%">
-						<div class="overlay">
-							<h2>Calculator</h2>
-							<a href="calculator/index.html" target="_blank">View Project</a>
-						</div>
-				</div>
+				<a href="calculator/index.html">
+					<div class="hovereffect">
+						<img class="img-responsive" src="images/calculator.png" alt="Calc" height="100%">
+							<div class="overlay">
+								<h2>Calculator</h2>
+								<p>View Project</p>
+							</div>
+					</div>
+				</a>
 			</div>
 		</div>
 
