--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <!-- script -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="javascript.js"></script>
   </head>
 
@@ -47,12 +51,11 @@
     </div>
 
 <!--Projects live here..-->
-    <div class="container">
+    <div id="tc-strength" class="container">
       <div class="row">
         <div class="col-md-4 project-container">
           <h2>Twin Cities Strength & Fitness</h2>
           <p>This simple WordPress website was built to be fully responsive accross all browser sizes to provide a landing page for my personal training business.</p>
-          <a href="http://www.twincitiesstrength.com" class="btn btn-outline-secondary">Visit Site</a>
         </div>
        <div class="col-md-8">
               <img class="float-right" src="images/TCstrength_macbook.png" alt="hairchateau" width="100%" height="100%">
@@ -60,14 +63,12 @@
       </div>
     </div>
 
-    <div class="container">
+    <div id="hair-chateau" class="container">
       <div class="row">
         <div class="col-md-4 project-container">
           <h2>The Hair Chateau</h2>
           <p>The Hair Chateau was looking to replace their static Google Pages website with an updated mobile-first site. This design was created with WordPress on a child theme template.</p>
-          <!--
-          <a href="hairchateau.html" class="btn btn-outline-secondary">View Project</a>
-        -->
+          <a href="http://thehairchateau.org/" class="btn btn-outline-secondary">View Live Site</a>
         </div>
        <div class="col-md-8">
               <img class="float-right" src="images/hairchateau_macbook.png" alt="hairchateau" width="100%" height="100%">
@@ -75,7 +76,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div id="fbc" class="container">
       <div class="row">
         <div class="col-md-4 project-container">
           <h2>Flexible Benefit Consulting</h2>
@@ -129,21 +130,15 @@
   </div>
 </div>
 
+</body>
 
 <footer>
   <div class="footer-icons">
 
   </div>
   <div class="container text-center">
-    Matthew Lynner 2018
+    Matthew Lynner 2020
   </div>
 </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-  </body>
 </html>
