Remove unused images and update projects

--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="projects.html#fbc">
+				<a href="projects.html#jameson">
 					<div class="hovereffect">
-						<img class="img-responsive" src="images/Flexben.png" alt="Flexben"
-						height="100%">
+						<img class="img-responsive" src="images/jameson.jpg" alt="JamesonPortfolio" height="100%">
 							<div class="overlay">
-								<h2>Flexible Benefits Consulting</h2>
+								<h2>Scott Jameson Portfolio</h2>
 								<p>View Details</p>
 							</div>
 					</div>
