--- a/projects.html
+++ b/projects.html
@@ -55,11 +55,14 @@
       <div class="row">
         <div class="col-md-4 project-container">
           <h2>Twin Cities Strength & Fitness</h2>
-          <p>This simple WordPress website was built to be fully responsive accross all browser sizes to provide a landing page for my personal training business.</p>
+          <p>Twin Cities Strenth & Fitness was the first WordPress website I built for my personal training business back in 2018.
+            The TC Strength website featured scheduling software, payment gateway, contact form, and was created to be responsive across all devices.
+          </p>
+          <a href="http://twincitiesstrength.com/" class="btn btn-outline-secondary disabled">View Live Site</a>
         </div>
-       <div class="col-md-8">
-              <img class="float-right" src="images/TCstrength_macbook.png" alt="hairchateau" width="100%" height="100%">
-      </div>
+        <div class="col-md-8">
+          <img class="float-right" src="images/TCstrength_macbook.png" alt="TCStrenth" width="100%" height="100%">
+        </div>
       </div>
     </div>
 
@@ -67,7 +70,11 @@
       <div class="row">
         <div class="col-md-4 project-container">
           <h2>The Hair Chateau</h2>
-          <p>The Hair Chateau was looking to replace their static Google Pages website with an updated mobile-first site. This design was created with WordPress on a child theme template.</p>
+          <p>Kaitlnn was looking to replace her static Google Pages website with an updated mobile-first site. 
+            Kaitlynn is now able to create and add new pages to keep all of her customers
+            up to date. The Hair Chateau website was built with WordPress and features Facebook reviews, contact form, and 
+            Google Voice.
+          </p>
           <a href="http://thehairchateau.org/" class="btn btn-outline-secondary">View Live Site</a>
         </div>
        <div class="col-md-8">
@@ -76,14 +83,18 @@
       </div>
     </div>
 
-    <div id="fbc" class="container">
+    <div id="jameson" class="container">
       <div class="row">
         <div class="col-md-4 project-container">
-          <h2>Flexible Benefit Consulting</h2>
-          <p>WordPress website built for an insurance company that was updating their branding and wanted to include a newer modern website. This site includes an RSS feed, Paubox form integration, and a customer portal.</p>
+          <h2>Scott Jameson Portfolio</h2>
+          <p>Scott Jameson was looking for an eye catching and engaging portfolio site to showcase his work.
+            Working with a professional graphic deisgner, we put together this stunning responsive WordPress site
+            that allows Scott to easily update and blog about his newest projects. 
+          </p>
+          <a href="http://scottjamesonmedia.com/" class="btn btn-outline-secondary">View Live Site</a>
         </div>
        <div class="col-md-8">
-              <img class="float-right" src="images/Flexben_macbook.png" alt="hairchateau" width="100%" height="100%">
+              <img class="float-right" src="images/jameson_macbook.png" alt="JamesonPortfolio" width="100%" height="100%">
       </div>
       </div>
     </div>
@@ -99,7 +110,7 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img class="card-img-top" src="images/colorgame.png" alt="Card image cap">
+        <img class="card-img-top" src="images/colorgame.png" alt="ColorGame">
         <div class="card-body">
           <h5 class="card-title">RGB Color Game</h5>
           <p class="card-text">Test your RGB color skills with The Great Color Game!</p>
@@ -109,17 +120,17 @@
     </div>
       <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top" src="images/quotemachine.png" alt="Card image cap">
+          <img class="card-img-top" src="images/quotemachine.png" alt="QuoteMachine">
           <div class="card-body">
             <h5 class="card-title">Quote Machine</h5>
-            <p class="card-text">Random quote machine built in Javascript. </p>
+            <p class="card-text">Random quote machine built in Javascript.</p>
             <a href="quotes/index.html" class="btn btn-secondary">View</a>
           </div>
         </div>
       </div>
     <div class="col-sm-4">
       <div class="card">
-        <img class="card-img-top" src="images/calculator.png" alt="Card image cap">
+        <img class="card-img-top" src="images/calculator.png" alt="Calculator">
         <div class="card-body">
           <h5 class="card-title">Calculator</h5>
           <p class="card-text">A simple calculator created with vanilla Javascript.</p>
