edits Update jumbotron animation to use call back function Update calculator styling Fix text errors Improve project responsiveness

--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
             up to date. The Hair Chateau website was built with WordPress and features Facebook reviews, contact form, and 
             Google Voice.
           </p>
-          <a href="http://thehairchateau.org/" class="btn btn-outline-secondary">View Live Site</a>
+          <a href="http://thehairchateau.org/" target="_blank" class="btn btn-outline-secondary">View Live Site</a>
         </div>
        <div class="col-md-8">
               <img class="float-right" src="images/hairchateau_macbook.png" alt="hairchateau" width="100%" height="100%">
@@ -88,10 +88,10 @@
         <div class="col-md-4 project-container">
           <h2>Scott Jameson Portfolio</h2>
           <p>Scott Jameson was looking for an eye catching and engaging portfolio site to showcase his work.
-            Working with a professional graphic deisgner, we put together this stunning responsive WordPress site
+            Working with a professional graphic designer, we put together this stunning responsive WordPress site
             that allows Scott to easily update and blog about his newest projects. 
           </p>
-          <a href="http://scottjamesonmedia.com/" class="btn btn-outline-secondary">View Live Site</a>
+          <a href="http://scottjamesonmedia.com/" target="_blank" class="btn btn-outline-secondary">View Live Site</a>
         </div>
        <div class="col-md-8">
               <img class="float-right" src="images/jameson_macbook.png" alt="JamesonPortfolio" width="100%" height="100%">
@@ -100,7 +100,6 @@
     </div>
 
 <hr class="hrstyleprojects">
-
 
 <div class="container application-header">
   <h1>Applications</h1>
